# fractal-generator

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: fractal.c  fractal.h  image.c  image.h  main.c  test_main.c
